--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,6 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
+displayName=Spec Sounds
+author=Lordluud
+description=New funny spec sounds
+support=https://github.com/CRoth23/SpecSounds.git
 tags=
-plugins=com.example.ExamplePlugin
+plugins=com.specsounds.SpecSoundsPlugin
